Fix CARGO-1294: Warning when starting containers on Java 8: ignoring option PermSize=48m; support was removed in 8.0